add routes to swagger
